--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rua-event",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "An elegant way to handle events",
   "main": "lib/index.js",
   "scripts": {
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/rua-js/rua-event#readme",
   "dependencies": {
+    "lodash": "^4.17.4",
     "rua-core": "^0.1.8",
     "wolfy87-eventemitter": "^5.2.4"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.91"
   }
 }
