--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rua-event",
-  "version": "1.1.0",
-  "description": "An elegant way to handle events",
+  "version": "1.1.1",
+  "description": "An elegant event emitter library",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest test.ts --coverage",
