--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "wolfy87-eventemitter": "^5.2.4"
   },
   "devDependencies": {
+    "@types/react": "^16.0.38",
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.91",
     "jest": "^22.1.4",
