--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "wolfy87-eventemitter": "^5.2.4"
   },
   "devDependencies": {
-    "@types/react": "^16.0.38",
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.91",
+    "@types/react": "^16.0.38",
+    "@types/react-native": "^0.52.13",
     "jest": "^22.1.4",
     "ts-jest": "^22.0.1",
     "typescript": "^2.6.2"
