--- a/demo/RuaUIDemo/package.json
+++ b/demo/RuaUIDemo/package.json
@@ -1,10 +1,12 @@
 {
   "name": "RuaUIDemo",
   "version": "0.0.1",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "ios": "react-native run-ios",
+    "android": "react-native run-android"
   },
   "dependencies": {
     "react": "^16.3.0-alpha.1",
