--- a/demo/RuaUIDemo/package.json
+++ b/demo/RuaUIDemo/package.json
@@ -9,8 +9,11 @@
     "android": "react-native run-android"
   },
   "dependencies": {
+    "antd-mobile": "^2.1.8",
     "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.4"
+    "react-native": "0.54.4",
+    "react-navigation": "^1.5.8",
+    "react-redux": "^5.0.7"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
