--- a/demo/RuaUIDemo/package.json
+++ b/demo/RuaUIDemo/package.json
@@ -13,7 +13,8 @@
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.4",
     "react-navigation": "^1.5.8",
-    "react-redux": "^5.0.7"
+    "react-redux": "^5.0.7",
+    "rua": "^0.4.0-alpha.6-fix2"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
