--- a/demo/RuaUIDemo/package.json
+++ b/demo/RuaUIDemo/package.json
@@ -13,11 +13,13 @@
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.4",
     "react-navigation": "^1.5.8",
+    "react-navigation-redux-helpers": "^1.0.3",
     "react-redux": "^5.0.7",
     "rua": "^0.4.0-alpha.6-fix2"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.3",
     "react-test-renderer": "^16.3.0-alpha.1"
