--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rua-ui",
-  "version": "0.1.2-fix4",
+  "version": "0.1.3",
   "description": "An elegant event emitter library",
   "main": "lib/index.js",
   "scripts": {
