--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rua-ui",
-  "version": "0.1.3",
-  "description": "An elegant event emitter library",
+  "version": "0.1.4",
+  "description": "An elegant ui kit",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest test.ts --coverage",
