--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rua-ui",
-  "version": "0.1.5-fix1",
+  "version": "0.1.5-fix3-refresh",
   "description": "An elegant ui kit",
   "main": "lib/index.js",
   "scripts": {
