--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rua-ui",
-  "version": "0.1.5-fix3-refresh",
+  "version": "0.1.6",
   "description": "An elegant ui kit",
   "main": "lib/index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rua-js/rua-event.git"
+    "url": "git+https://github.com/rua-js/rua-ui.git"
   },
   "keywords": [
     "rua",
@@ -20,9 +20,9 @@
   "author": "copydoghc",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rua-js/rua-event/issues"
+    "url": "https://github.com/rua-js/rua-ui/issues"
   },
-  "homepage": "https://github.com/rua-js/rua-event#readme",
+  "homepage": "https://github.com/rua-js/rua-ui#readme",
   "dependencies": {
     "react-native-platform-touchable": "^1.1.1",
     "react-native-vector-icons": "^4.6.0",
