--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     /* Basic Options */
-    "target": "esnext",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
+    "target": "esnext",
+    /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
     "module": "commonjs",
     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     // "lib": [],                             /* Specify library files to be included in the compilation:  */
@@ -9,7 +10,7 @@
     // "checkJs": true,                       /* Report errors in .js files. */
     "jsx": "react",
     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
-    // "declaration": true,
+    "declaration": true,
     /* Generates corresponding '.d.ts' file. */
     // "sourceMap": true,
     /* Generates corresponding '.map' file. */
