--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rua-ui",
-  "version": "0.1.9-fix.1",
+  "version": "0.2.3",
   "description": "An elegant ui kit",
   "main": "lib/index.js",
   "scripts": {
@@ -17,13 +17,14 @@
     "ui",
     "rua-ui"
   ],
-  "author": "copydoghc",
+  "author": "copydog",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/rua-js/rua-ui/issues"
   },
   "homepage": "https://github.com/rua-js/rua-ui#readme",
   "dependencies": {
+    "antd-mobile": "^2.1.8",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-vector-icons": "^4.6.0",
     "rua": "^0.5.2-fix.4",
