--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rua-ui",
-  "version": "0.3.0-beta.2",
+  "version": "0.4.0",
   "description": "An elegant ui kit",
   "main": "lib/index.js",
   "scripts": {
@@ -37,7 +37,7 @@
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.91",
     "@types/react": "^16.0.38",
-    "@types/react-native": "^0.52.13",
+    "@types/react-native": "^0.55.14",
     "jest": "^22.1.4",
     "ts-jest": "^22.0.1",
     "typescript": "^2.6.2"
