--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rua-ui",
-  "version": "0.4.0",
+  "version": "0.4.0-alpha.2",
   "description": "An elegant ui kit",
   "main": "lib/index.js",
   "scripts": {
