--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rua-ui",
-  "version": "0.5.0",
+  "version": "0.6.1",
   "description": "An elegant ui kit",
   "main": "lib/index.js",
   "scripts": {
@@ -24,16 +24,13 @@
   },
   "homepage": "https://github.com/rua-js/rua-ui#readme",
   "dependencies": {
-    "@types/react-native-elements": "^0.18.0",
     "antd-mobile": "^2.1.8",
     "react-native-elements": "^0.19.1",
     "react-native-platform-touchable": "^1.1.1",
-    "react-native-vector-icons": "^4.6.0",
-    "rua": "^0.5.2-fix.4",
-    "rua-core": "^0.2.0",
-    "wolfy87-eventemitter": "^5.2.4"
+    "react-native-vector-icons": "^4.6.0"
   },
   "devDependencies": {
+    "@types/react-native-elements": "^0.18.0",
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.91",
     "@types/react": "^16.0.38",
