--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "rua-ui",
-  "version": "0.6.3",
+  "version": "0.7.0-beta.2",
   "description": "An elegant ui kit",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest test.ts --coverage",
-    "build": "tsc"
+    "build": "rm -rf ./lib && tsc"
   },
   "repository": {
     "type": "git",
@@ -25,16 +25,17 @@
   "homepage": "https://github.com/rua-js/rua-ui#readme",
   "dependencies": {
     "antd-mobile": "^2.1.8",
-    "react-native-elements": "^0.19.1",
+    "antd-mobile-rn": "^2.2.0",
+    "react-native-elements": "1.0.0-beta5",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-vector-icons": "^4.6.0"
   },
   "devDependencies": {
-    "@types/react-native-elements": "^0.18.0",
     "@types/jest": "^22.0.1",
     "@types/lodash": "^4.14.91",
     "@types/react": "^16.0.38",
     "@types/react-native": "^0.55.14",
+    "@types/react-native-elements": "^0.18.0",
     "jest": "^22.1.4",
     "ts-jest": "^22.0.1",
     "typescript": "^2.6.2"
