--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "rua-ui",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "An elegant ui kit",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest test.ts --coverage",
-    "build": "rm -rf ./lib && tsc"
+    "build": "rm -rf ./lib && tsc || post-build",
+    "post-build": "node ./scripts/release/move-dts.js"
   },
   "repository": {
     "type": "git",
