--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rua-ui",
-  "version": "0.9.6",
+  "version": "0.10.0-beta.3",
   "description": "An elegant ui kit",
   "main": "lib/index.js",
   "scripts": {
