--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rua-ui",
-  "version": "0.11.0",
-  "description": "An elegant ui kit",
+  "version": "0.11.1",
+  "description": "a mobile ui library",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest test.ts --coverage",
