--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rua-ui",
-  "version": "0.11.1",
-  "description": "a mobile ui library",
+  "version": "0.12.0",
+  "description": "a mobile ui helper",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest test.ts --coverage",
@@ -15,6 +15,7 @@
   "keywords": [
     "rua",
     "rua.js",
+    "ruax",
     "ui",
     "rua-ui"
   ],
