--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rua-ui",
-  "version": "0.12.0",
+  "name": "@ruax/ui",
+  "version": "0.1.0",
   "description": "a mobile ui helper",
   "main": "lib/index.js",
   "scripts": {
